[gd_scene load_steps=2 format=2]

[ext_resource path="res://LoginMenu.gd" type="Script" id=1]

[node name="Node2D" type="Control"]
margin_left = 312.0
margin_top = 128.0
margin_right = 312.0
margin_bottom = 128.0
script = ExtResource( 1 )

[node name="Username" type="TextEdit" parent="."]
margin_right = 424.0
margin_bottom = 93.0
text = "Username"

[node name="Password" type="TextEdit" parent="."]
margin_left = 1.0
margin_top = 110.0
margin_right = 424.0
margin_bottom = 200.0
text = "Password"

[node name="Button" type="Button" parent="."]
margin_left = 1.0
margin_top = 211.0
margin_right = 424.0
margin_bottom = 284.0
text = "Confirm"

[node name="Button2" type="Button" parent="."]
margin_left = 442.0
margin_top = 221.0
margin_right = 682.0
margin_bottom = 267.0
text = "Already have an account? Click here"

[node name="loginwrong" type="Button" parent="."]
visible = false
margin_left = -18.0
margin_top = 45.0
margin_right = 443.0
margin_bottom = 174.0
text = "Information Incorrect, click here and try again"

[node name="login" type="Button" parent="."]
visible = false
margin_left = -5.0
margin_top = 206.0
margin_right = 425.0
margin_bottom = 297.0
text = "log ind"

[node name="Button3" type="Button" parent="."]
margin_left = 2.0
margin_top = 306.0
margin_right = 428.0
margin_bottom = 416.0

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_Button2_button_down"]
[connection signal="button_down" from="loginwrong" to="." method="_on_loginwrong_button_down"]
[connection signal="pressed" from="login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
